--- a/form.html
+++ b/form.html
@@ -7,6 +7,18 @@
   <body>
 
   	<form accept-charset="UTF-8" action="https://usebasin.com/f/11510c78cfa5" enctype="multipart/form-data" method="POST">
+  <label for="email-address">Email Address</label>
+  <input type="email" id="email" name="email" required>
+
+  <textarea rows="4" cols="50" name="comment" required>
+  </textarea>
+
+  <button type="submit">Submit</button>
+</form>
+
+
+<!--
+  	<form accept-charset="UTF-8" action="https://usebasin.com/f/11510c78cfa5" enctype="multipart/form-data" method="POST">
 
   		<input type="email" id="email" name="email" required>
 
@@ -19,6 +31,8 @@
 
   		<input type="submit">
 	</form>
-  
+
+-->
+
   </body>
 </html>
