--- a/form.html
+++ b/form.html
@@ -6,15 +6,11 @@
   </head>
   <body>
 
-  	<form accept-charset="UTF-8" action="https://usebasin.com/f/11510c78cfa5" enctype="multipart/form-data" method="POST">
-  <label for="email-address">Email Address</label>
-  <input type="email" id="email" name="email" required>
-
-  <textarea rows="4" cols="50" name="comment" required>
-  </textarea>
-
-  <button type="submit">Submit</button>
-</form>
+  <form action="https://www.elformo.com/forms/1465862b-c966-4798-bf07-35279bbc7af7" method="post" accept-charset="UTF-8">
+    <input id="email" name="email" type="email" />
+    <textarea id="comment" name="comment"></textarea>
+    <input id="submit" name="submit" type="Submit" />
+  </form>
 
 
 <!--
